# raysid-app

./: .gitignore  DOKUMENTACJA_TECHNICZNA.md  README.md  RELEASE.md  __init__.py  ble_worker.py  build_windows.py  install.sh  instr.md  main.py  pyproject.toml  raysid-app.spec  requirements-build.txt
.github/: copilot-instructions.md
.github/workflows/: release.yml
scripts/: install_qt_deps.sh
src/raysid/: __init__.py  __main__.py  ble_worker.py
src/raysid/widgets/: cps_widget.py  main_window.py  settings_dialog.py  spectrum_widget.py
widgets/: __init__.py  main_window.py  settings_dialog.py
